# qualcomm___qai-appbuilder

./: BUILD.md  README.md  setup.py
docs/: genie_guide_en.md  genie_guide_zh.md  guide_en.md  guide_zh.md  python.md  python_arm64.md  user_guide.md
make/: Android.mk  Application.mk
samples/c++/beit/: README.md
samples/c++/real_esrgan_x4plus/: README.md
samples/genie/c++/: README.md  build_android.bat
samples/genie/c++/Service/examples/SampleApp/: CMakeLists.txt
samples/linux/: README.md  README_LE.md
samples/python/aotgan/: aotgan.py
samples/python/beit/: beit.py
samples/python/depth_anything/: depth_anything.py
samples/python/docs/: sample_guide.md
samples/python/easy_ocr/: easy_ocr.py
samples/python/face_attrib_net/: face_attrib_net.py
samples/python/facemap_3dmm/: facemap_3dmm.py
samples/python/googlenet/: googlenet.py
samples/python/inception_v3/: inception_v3.py
samples/python/lama_dilated/: lama_dilated.py
samples/python/mediapipe_hand/: mediapipe_hand.py
samples/python/nomic_embed_text/: nomic_embed_text.py
samples/python/openai_clip/: openai_clip.py
samples/python/openpose/: openpose.py
script/qai_appbuilder/: onnxwrapper.py  qnncontext.py
src/: CMakeLists.txt  LibAppBuilder.cpp  QnnInferenceEngine.cpp
tools/launcher/: README.md
tools/launcher_linux/: README.md
tools/onnxwrapper/: onnxwrapper.py
tools/qaimodelbuilder/: .gitignore  Console.bat  README.md  README.zh-CN.md  Setup.bat  Start.bat  Uninstall.bat  build_info.json  pyproject.toml  qai.bat
tools/qnn/: README.md  qnn_model_verify.py
(+1723 files in other folders)
